--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>info.jabara</groupId>
-  <artifactId>archetype-javaee7</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>Archetype - archetype-javaee7</name>
+  <artifactId>archetype-javaee7-simple</artifactId>
+  <version>1.0.0</version>
+  <name>Archetype - archetype-javaee7-simple</name>
   <url>http://maven.apache.org</url>
 </project>
