--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -49,9 +49,9 @@
         </dependency>
 
         <dependency>
-            <groupId>jabaraster</groupId>
-            <artifactId>jabara-general</artifactId>
-            <version>1.7.4</version>
+            <groupId>net.arnx</groupId>
+            <artifactId>jsonic</artifactId>
+            <version>1.3.10</version>
         </dependency>
 
         <dependency>
